corrected contrast error of submit button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@ display:inline;
     border-radius: 2rem;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
+
+.btn-outline-secondary {
+    color: #333;
+}
+
 .connect {
     color: antiquewhite;
     padding-top: 2rem;
